--- a/styles/header.css
+++ b/styles/header.css
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
 
 .header__nav-list {
@@ -41,7 +42,7 @@ white-space: nowrap;
     .header__nav-link {
         font-size: 16px;
     }
-    .btn{
+    .header__actions .btn{
         width: 120px;
         font-size: 16px;
         
@@ -49,8 +50,19 @@ white-space: nowrap;
 }
 
 @media (max-width: 768px) {
+    .header__wrapper {
+        padding: 0 0 0 45px;
+    }
     .header__nav{
         display: none;
+    }
+}
+
+@media (max-width: 390px) {
+    .header__actions .btn{
+        width: 90px;
+      
+        
     }
 }
 
